fullSandbox11072023/force-app/main/default/objects/Backorder_Replacement_Matrix__c/Backorder_Replacement_Matrix__c.object-meta.xml
<CustomObject>
    <label>Backorder Replacement Matrix</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Backorder Replacement Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backorder Replacement Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>