fullSandbox11072023/force-app/main/default/objects/Backorder_Replacement_Matrix__c/fields/Alt_Product_1__c.field-meta.xml
<CustomField>
    <fullName>Alt_Product_1__c</fullName>
    <label>Alt Product #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>