fullSandbox11072023/force-app/main/default/objects/Backorder_Replacement_Matrix__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Holds BU specific to each product.</description>
    <inlineHelpText>Holds BU specific to each product.</inlineHelpText>
    <label>Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>