fullSandbox11072023/force-app/main/default/objects/Backorder_Replacement_Matrix__c/fields/Material_Key__c.field-meta.xml
<CustomField>
    <fullName>Material_Key__c</fullName>
    <externalId>true</externalId>
    <label>Material Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>